--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="container">
+    <div class="logo"><a href="https://www.survivalstraps.com"><img src="survival-straps.svg" alt="Survival Straps"></a></div>
+    <div class="logo"><a href="https://www.activeedgegear.com"><img src="active-edge-gear.svg" alt="Active Edge Gear"></a></div>
+  </div>
 </body>
 </html>
